--- a/css/sc-player-minimal/structure.css
+++ b/css/sc-player-minimal/structure.css
@@ -96,16 +96,24 @@
 .sc-player ol.sc-trackslist{
 	padding-top: 50px;
 }
-
 .sc-player ol.sc-trackslist li{
+  position: relative;
   cursor: pointer;
   margin: 0;
   padding: 5px;
   list-style: none;
 }
 .sc-player ol.sc-trackslist li a {
-	padding-right: 30px;
+	padding-right: 4em;
 }
+.sc-track-duration {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  text-align: right;
+}
+
+
 
 /* Track info*/
 
